--- a/acid.yml
+++ b/acid.yml
@@ -1,6 +1,6 @@
 setup:
     - sudo apt-get install crystal -qq
 env:
-    - LIBRARY_PATH="/opt/crystal/embedded/lib"
+    LIBRARY_PATH: "/opt/crystal/embedded/lib"
 exec:
     - make
